--- a/data/dtu-caesarcipher-application.ui
+++ b/data/dtu-caesarcipher-application.ui
@@ -4,6 +4,7 @@
     <property name="can_focus">False</property>
     <property name="default_width">600</property>
     <property name="default_height">400</property>
+    <property name="window-position">GTK_WIN_POS_CENTER</property>
     <child>
       <object class="GtkStack" id="stack_view">
         <property name="visible">True</property>
@@ -94,6 +95,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
+            <property name="width_request">90</property>
           </object>
           <packing>
             <property name="pack_type">end</property>
